--- a/frontend/index.html
+++ b/frontend/index.html
@@ -108,8 +108,8 @@ let riseStartTime = 0;
 const riseDuration = 1200;
 let hmStarted = false;
 
-let baseRotY = -0.35;   // Basis-Kopfrotation (Y)
-let baseRotX = 0.25;    // Basis-Kopfrotation (X)
+let baseRotY = -0.35;
+let baseRotX = 0.25;
 let targetRotY = baseRotY;
 let targetRotX = baseRotX;
 let baseY = 0;
@@ -142,7 +142,6 @@ loader.load("./avatar.glb", gltf=>{
   model.scale.set(scaleFactor, scaleFactor, scaleFactor);
   const center = box.getCenter(new THREE.Vector3());
   model.position.sub(center);
-  // Initial-Rotation passend zur Basis
   model.rotation.y = baseRotY - Math.PI/2;
   model.rotation.x = baseRotX;
   scene.add(model);
@@ -156,58 +155,34 @@ loader.load("./avatar.glb", gltf=>{
 function animate(){
   requestAnimationFrame(animate);
   if(model){
-    const now = Date.now();
+    const tNow = Date.now();
 
-    // --- Aufrichten nach Begrüßung (rising) ---
-    if(rising){
-      const t = (performance.now() - riseStartTime) / riseDuration;
-      const clamped = t < 0 ? 0 : (t > 1 ? 1 : t);
-      const easeT = (-Math.cos(Math.PI * clamped)/2 + 0.5);
-      targetRotY = baseRotY * (1 - easeT);
-      targetRotX = baseRotX * (1 - easeT);
-      if(t >= 1) rising = false;
-    }
-
-    // --- Hm-Phase: langsam nach vorne neigen (nur X) ---
-    if(hmNeigen){
-      const t = (performance.now() - hmStartTime) / hmDuration;
-      const tt = t < 0 ? 0 : (t > 1 ? 1 : t);
-      // Nur Vorne-Neigen: Y bleibt unverändert während der gesamten Hm-Phase
-      model.rotation.x = hmStartRotX + 0.25 * tt;
-      // model.rotation.y bleibt so wie beim Start der Neigephase (keine Links-Drehung)
-    }
-
-    // --- Atmung (immer aktiv, auch während hmNeigen) ---
-    // stärkere, aber natürlich wirkende Atmung (kombinierte Sinus)
-    const breathe = Math.sin(now * 0.0016) * 0.012 + Math.sin(now * 0.0009) * 0.006;
+    // Atmung immer aktiv, stärker bei Hm-Neigung
+    const breathe = Math.sin(tNow*0.0015)*(hmNeigen?0.012:0.008) + Math.sin(tNow*0.0007)*(hmNeigen?0.006:0.004);
     model.position.y = baseY + breathe;
 
-    // --- Talking Animation mit lebendigen Kopfbewegungen ---
-    if(talking){
-      const swayY = Math.sin(now * 0.0012) * 0.02 + Math.sin(now * 0.0023) * 0.01;
-      const swayX = Math.sin(now * 0.0017) * 0.015 + Math.sin(now * 0.0021) * 0.008;
-      const swayZ = Math.sin(now * 0.0015) * 0.004;
+    if(hmNeigen){
+      // Hm-Neigephase: nach linke Seite des Kopfes + leicht nach vorne
+      const t = (performance.now() - hmStartTime) / hmDuration;
+      const easeT = t > 1 ? 1 : t;
+      model.rotation.x = hmStartRotX + 0.25 * easeT;      // leicht nach vorne
+      model.rotation.y = hmStartRotY - 0.25 * easeT;      // nach linke Seite des Kopfes
+      model.rotation.z = 0;
+    } 
+    else if(talking){
+      // Während Antwort: langsam auf frontal zurück, keine Drehung nach rechts
+      const swayY = Math.sin(tNow*0.0012)*0.02 + Math.sin(tNow*0.0023)*0.01;
+      const swayX = Math.sin(tNow*0.0017)*0.015 + Math.sin(tNow*0.0021)*0.008;
+      const swayZ = Math.sin(tNow*0.0015)*0.004;
 
-      // Wenn hmNeigen aktiv, soll der Kopf nicht zurückdrehen — also nur minimale Lerp in Y/X auf den
-      // bestehenden geneigten Zustand. Wir vermeiden dabei Links-Drehungen komplett.
-      if(!hmNeigen){
-        model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, targetRotY - Math.PI/2 + swayY, 0.08);
-        model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, targetRotX + swayX, 0.08);
-      } else {
-        // hmNeigen: behalte Neigung in X (bereits gesetzt oben), ergänze nur dezente Z-Sway
-        model.rotation.y = model.rotation.y; // unverändert
-        model.rotation.z = swayZ;
-      }
+      model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, baseRotY + swayY - Math.PI/2, 0.08); // frontal
+      model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX + swayX, 0.08);
+      model.rotation.z = swayZ;
     } else {
-      // Nicht talking & nicht hmNeigen: sanft zurück zur Basisrotation
-      if(!hmNeigen){
-        model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, targetRotY - Math.PI/2, 0.02);
-        model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, targetRotX, 0.02);
-        model.rotation.z = THREE.MathUtils.lerp(model.rotation.z || 0, 0, 0.02);
-      } else {
-        // hmNeigen aktiv, Kopf bleibt geneigt nach vorne (X) — keine Rückdrehung nach links oder frontal
-        // (position.y wird weiterhin von der Atmung gesetzt)
-      }
+      // Ruheposition: leichtes Atmen
+      model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, baseRotY - Math.PI/2, 0.02);
+      model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX, 0.02);
+      model.rotation.z = THREE.MathUtils.lerp(model.rotation.z || 0, 0, 0.02);
     }
   }
   renderer.render(scene,camera);
@@ -243,9 +218,8 @@ if("webkitSpeechRecognition" in window){
       hmNeigen = true;
       hmStartTime = performance.now();
       hmStartRotX = model.rotation.x;
-      hmStartRotY = model.rotation.y; // wird während Hm-Phase nicht verändert
-      // langsames "Hmm" als Übergang (slow=true)
-      speak("Hmmmmmm… einen Moment", true);
+      hmStartRotY = model.rotation.y;
+      speak("Hmmmmmm… einen Moment", true); 
 
       fetch("/ask", {
         method:"POST",
@@ -254,23 +228,18 @@ if("webkitSpeechRecognition" in window){
       })
       .then(resp => resp.json())
       .then(data => {
-        // entfernte reduzierte linke Drehung: wir wollen keine Links-Drehung mehr
-        // Stattdessen lassen wir die Antwort sprechen starten, dort wird der Kopf wieder frontal gestellt.
+        targetRotY = baseRotY; // auf frontal zurück
+
         rising = true;
         riseStartTime = performance.now();
-
-        // Antwort sprechen (normal speed -> when utter.onstart runs with slow=false we will
-        // clear the hmNeigen and allow frontal Rückdrehung)
         speak(data.answer);
 
-        // Nachdem die Antwort endete, wieder Basis-Zustand aufbauen
         setTimeout(()=>{
           rising = true;
           riseStartTime = performance.now();
           hmStarted = false;
           lastTranscript = "";
-          targetRotY = baseRotY; // Basis beibehalten
-        }, 500);
+        }, 500); 
       })
       .catch(e => console.error("Fehler bei /ask:", e));
     }
@@ -283,7 +252,7 @@ let maleVoice = null;
 function loadVoices(){
   const voices = speechSynthesis.getVoices();
   maleVoice = voices.find(v=>/male|mann|stefan|markus/i.test(v.name)) ||
-              voices.find(v=>v.lang && v.lang.startsWith("de")) ||
+              voices.find(v=>v.lang.startsWith("de")) ||
               voices[0]||null;
 }
 speechSynthesis.onvoiceschanged = loadVoices;
@@ -297,20 +266,8 @@ function speak(text, slow=false){
   utter.pitch = 0.6;
   utter.voice = maleVoice;
   utter.volume = 0.6;
-  // onstart: set talking, und wenn das Gesprächs-Statement (nicht das langsame "Hmm") startet,
-  // beenden wir die Hm-Neigung und bringen den Kopf frontal zurück.
-  utter.onstart = () => {
-    talking = true;
-    // slow===false → das ist die wirkliche Antwort (Antwort-Gespräch)
-    if(!slow){
-      // Kopf sofort wieder frontal ausrichten (hmNeigen darf enden)
-      hmNeigen = false;
-      // Zielrotation frontal (Basis). Wir vermeiden dabei Links-Drehungen — targetRotY bleibt basis.
-      targetRotY = baseRotY;
-      targetRotX = baseRotX;
-    }
-  };
-  utter.onend = () => { talking = false; };
+  utter.onstart=()=>{ talking=true; };
+  utter.onend=()=>{ talking=false; };
   speechSynthesis.speak(utter);
 }
 
