--- a/frontend/index.html
+++ b/frontend/index.html
@@ -157,31 +157,31 @@ function animate(){
   if(model){
     const tNow = Date.now();
 
-    // Atmung immer aktiv, stärker bei Hm-Neigung
+    // Atmung immer aktiv, etwas stärker bei Hm-Neigung
     const breathe = Math.sin(tNow*0.0015)*(hmNeigen?0.012:0.008) + Math.sin(tNow*0.0007)*(hmNeigen?0.006:0.004);
     model.position.y = baseY + breathe;
 
+    // Hm-Neigephase: langsam nach linke Seite des Kopfes + leicht nach vorne
     if(hmNeigen){
-      // Hm-Neigephase: nach linke Seite des Kopfes + leicht nach vorne
       const t = (performance.now() - hmStartTime) / hmDuration;
       const easeT = t > 1 ? 1 : t;
-      model.rotation.x = hmStartRotX + 0.25 * easeT;      // leicht nach vorne
-      model.rotation.y = hmStartRotY - 0.25 * easeT;      // nach linke Seite des Kopfes
+      model.rotation.x = hmStartRotX + 0.25 * easeT; // leicht nach vorne
+      model.rotation.y = hmStartRotY - 0.25 * easeT; // nach linke Seite des Kopfes
       model.rotation.z = 0;
     } 
     else if(talking){
-      // Während Antwort: langsam auf frontal zurück, keine Drehung nach rechts
+      // Kopf zurück auf frontal, keine Rechtsbewegung
       const swayY = Math.sin(tNow*0.0012)*0.02 + Math.sin(tNow*0.0023)*0.01;
       const swayX = Math.sin(tNow*0.0017)*0.015 + Math.sin(tNow*0.0021)*0.008;
       const swayZ = Math.sin(tNow*0.0015)*0.004;
 
-      model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, baseRotY + swayY - Math.PI/2, 0.08); // frontal
-      model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX + swayX, 0.08);
+      model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, targetRotY + swayY - Math.PI/2, 0.08);
+      model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, targetRotX + swayX, 0.08);
       model.rotation.z = swayZ;
-    } else {
-      // Ruheposition: leichtes Atmen
-      model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, baseRotY - Math.PI/2, 0.02);
-      model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, baseRotX, 0.02);
+    } else if(!hmNeigen){
+      // Ruheposition, leichtes Atmen
+      model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, targetRotY - Math.PI/2, 0.02);
+      model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, targetRotX, 0.02);
       model.rotation.z = THREE.MathUtils.lerp(model.rotation.z || 0, 0, 0.02);
     }
   }
