--- a/frontend/index.html
+++ b/frontend/index.html
@@ -99,7 +99,7 @@ let model, talking=false, greeted=false;
 let lastTranscript = "";
 let hmNeigen = false;
 let hmStartTime = 0;
-const hmDuration = 4000;
+const hmDuration = 2000;
 let hmStartRotX = 0;
 let hmStartRotY = 0;
 
@@ -142,7 +142,7 @@ loader.load("./avatar.glb", gltf=>{
   model.scale.set(scaleFactor, scaleFactor, scaleFactor);
   const center = box.getCenter(new THREE.Vector3());
   model.position.sub(center);
-  model.rotation.y = baseRotY - Math.PI/2; // initiale leichte Rechtsdrehung bleibt
+  model.rotation.y = baseRotY - Math.PI/2;
   model.rotation.x = baseRotX;
   scene.add(model);
   loadingText.style.display="none";
@@ -155,39 +155,41 @@ loader.load("./avatar.glb", gltf=>{
 function animate(){
   requestAnimationFrame(animate);
   if(model){
-    const tNow = Date.now();
+    // Aufrichten nach Begrüßung
+    if(rising){
+      const t = (performance.now() - riseStartTime) / riseDuration;
+      const easeT = t < 0 ? 0 : (t > 1 ? 1 : (-Math.cos(Math.PI * t)/2 + 0.5));
+      targetRotY = baseRotY * (1 - easeT);
+      targetRotX = baseRotX * (1 - easeT);
+      if(t >= 1) rising = false;
+    }
 
-    // --- Atmung immer aktiv ---
-    const breathe = Math.sin(tNow*0.0015)*(hmNeigen?0.012:0.008) + Math.sin(tNow*0.0007)*(hmNeigen?0.006:0.004);
-    model.position.y = baseY + breathe;
-
-    // --- Hm-Neigephase: nur links + leicht nach vorne ---
+    // Hm-Phase: langsam nach vorne-links neigen
     if(hmNeigen){
       const t = (performance.now() - hmStartTime) / hmDuration;
-      const easeT = t > 1 ? 1 : t;
-      model.rotation.x = hmStartRotX + 0.25 * easeT;      // leicht nach vorne
-      model.rotation.y = hmStartRotY - 0.25 * easeT;      // nach linke Seite des Kopfes
-      model.rotation.z = 0;
-    } 
-    // --- Antwortphase: Kopf zurück auf frontal, keine Rechtsbewegung ---
-    else if(talking){
-      const swayY = Math.sin(tNow*0.0012)*0.02 + Math.sin(tNow*0.0023)*0.01;
-      const swayX = Math.sin(tNow*0.0017)*0.015 + Math.sin(tNow*0.0021)*0.008;
-      const swayZ = Math.sin(tNow*0.0015)*0.004;
+      if(t >= 1){
+        hmNeigen = false;
+        model.rotation.x = hmStartRotX + 0.3;
+        model.rotation.y = hmStartRotY + 0.3; 
+      } else {
+        model.rotation.x = hmStartRotX + 0.3 * t;
+        model.rotation.y = hmStartRotY + 0.3 * t;
+      }
+    }
 
-      // Ziel: frontal zurück, kein Rechtsausweichen
-      model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, targetRotY - Math.PI/2 + swayY, 0.08);
-      model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, targetRotX + swayX, 0.08);
-      model.rotation.z = swayZ;
-    } 
-    // --- Alles andere unverändert ---
-    else {
+    // Normal Talking Animation
+    if(talking && !hmNeigen){
+      model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, targetRotY + Math.sin(Date.now()*0.0015)*0.03 - Math.PI/2, 0.08);
+      model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, targetRotX + Math.sin(Date.now()*0.0019)*0.015, 0.08);
+      model.rotation.z = Math.sin(Date.now()*0.0012)*0.015;
+      model.position.y = baseY + Math.sin(Date.now()*0.01)*0.002;
+    } else if(!hmNeigen){
       model.rotation.y = THREE.MathUtils.lerp(model.rotation.y, targetRotY - Math.PI/2, 0.02);
       model.rotation.x = THREE.MathUtils.lerp(model.rotation.x, targetRotX, 0.02);
       model.rotation.z = THREE.MathUtils.lerp(model.rotation.z || 0, 0, 0.02);
+      model.position.y = THREE.MathUtils.lerp(model.position.y, baseY, 0.02);
     }
   }
-
   renderer.render(scene,camera);
 }
 
@@ -231,8 +233,6 @@ if("webkitSpeechRecognition" in window){
       })
       .then(resp => resp.json())
       .then(data => {
-        targetRotY = baseRotY; // auf frontal zurück
-
         rising = true;
         riseStartTime = performance.now();
         speak(data.answer);
