--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,9 +5,11 @@
 <link rel="apple-touch-icon" href="avatar.png">
 <meta name="theme-color" content="#000000">
 <meta charset="UTF-8" />
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Frag Friedrich Barbarossa</title>
-<style>
 body {
   margin: 0;
   overflow: hidden;
@@ -90,11 +92,8 @@ footer a:hover { text-decoration: underline; }
 <footer>
 © 2025 <a href="https://christoph-dammann.de" target="_blank">Dr. Christoph Dammann</a>
 </footer>
-
-<script src="https://cdn.jsdelivr.net/npm/three@0.146.0/build/three.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/loaders/GLTFLoader.js"></script>
-
-<script>
+ <script src="https://cdn.jsdelivr.net/npm/three@0.146.0/build/three.min.js?v=2"></script>
+<script src="https://cdn.jsdelivr.net/npm/three@0.146.0/examples/js/loaders/GLTFLoader.js?v=2"></script>
 let model, talking=false, greeted=false;
 let lastTranscript = "";
 let hmNeigen = false;
